--- a/app/templates/single-product.html
+++ b/app/templates/single-product.html
@@ -104,6 +104,8 @@
                                         <p>Доступные размеры: 
                                             {{product.sizes}}
                                         </p>
+                                        <p>Доступные цвета:
+                                            
                                     <!--</div>-->
                                     <div class="pre-box">
                                         <span class="special-price">{{product.price}}₽</span>
