--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -117,8 +117,8 @@
                                     <div class="mobile-menu">
                                         <nav id="dropdown">
                                             <ul>
-                                                <li><a href="index.html">Home</a></li>
-                                                <li><a href="shop.html">Shop</a>
+                                                <li><a href="{{url_for('main.index')}}">Home</a></li>
+                                                <li><a href="{{url_for('main.shop')}}">Shop</a>
                                                     <ul>
                                                         <li><a href="#">all products</a>
                                                             <ul>
@@ -186,7 +186,7 @@
                                                         </li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="contact.html">Contact</a></li>
+                                                <li><a href="{{url_for('main.contact')}}">Contact</a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -287,7 +287,7 @@
                                                                     <div class="por-dse color">
                                                                         <ul>
                                                                             <li><span>color</span><strong>:</strong> <a href="#">Red</a> <a href="#">Green</a> <a href="#">Blue</a> <a href="#">Orange</a></li>
-                                                                            <li><span>size</span><strong>:</strong>  <a href="#">SL</a> <a href="#">SX</a> <a href="#">M</a> <a href="#">XL</a></li>
+                                                                            <li><span>Размеры</span><strong>:</strong>  <a href="#">SL</a> <a href="#">SX</a> <a href="#">M</a> <a href="#">XL</a></li>
                                                                         </ul>
                                                                     </div>
                                                                 </div>
